Fix ilricrowd bottom graphic spacing by adjusting bottom margin (was messing up the 55px action for the people below) Adjust the relative positioning so it will be lined up with the top ilricrowd graphic

--- a/styles/style.screen.css
+++ b/styles/style.screen.css
@@ -149,9 +149,9 @@ a:hover, a:visited:hover {
 #ilricrowdright2 {
 	float: left;
 	position: relative;
-	top: -20px;
+	top: -55px;
+	left: -44px;
 	margin-right: 44px;
-	margin-bottom: 20px;
 }
 
 div.person {
